misalignment correction

--- a/styles.css
+++ b/styles.css
@@ -190,8 +190,8 @@ header {
 .play-button {
     /* color: white; */
     position: absolute;
-    top: 230px;
-    left: 970px;
+    top: 254px;
+    left: 986px;
 }
 
 .fa-play-circle-o {
@@ -204,9 +204,9 @@ header {
     text-transform: uppercase;
     position: absolute;
     color: #989898;
-    bottom: 300px;
-    left: 1080px;
-    font-size: 9px;
+    bottom: 75px;
+    left: 1020px;
+    font-size: 11px;
     font-weight: 500;
     letter-spacing: .1rem;
     font-family: "Jost", sans-serif;
@@ -215,6 +215,7 @@ header {
 /* second section styling */
 
 .section-two-container {
+    /* border: 2px solid red; */
     position: relative;
     bottom: 230px;
     padding-left: 10rem;
@@ -224,11 +225,11 @@ header {
 }
 
 .section-two-container > div > img {
-    width: 280px;
-    height: 24vh;
+    width: 300px;
+    height: 34vh;
     border: .8px solid #3d3c42;
     border-radius: 2px;
-    opacity: 6;
+    opacity: 1;
 }
 
 .number, .title, .para {
@@ -273,7 +274,7 @@ header {
 
 .history-container > img {
     width: 440px;
-    height: 40vh;
+    height: 56vh;
     background-color: #14121b;
 }
 
@@ -286,9 +287,9 @@ header {
 .text-history-section {
     color: #f4f6f3;
     background-color: #14121a;
-    width: 440px;
-    height: 40vh;
-    padding-inline: 3rem;
+    width: 478px;
+    height: 56vh;
+    padding-inline: 2.9rem;
     padding-block: 3.5rem;
     border: .8px solid #3d3c42;
 }
@@ -512,8 +513,8 @@ header {
 
 .machine > img {
     margin-top: -1.7rem;
-    width: 175px;
-    height: 30vh;
+    width: 178px;
+    height: 42vh;
 }
 
 /* product section styling */
@@ -563,7 +564,7 @@ header {
     left: 208px;
     display: flex;
     align-items: center;
-    gap: 25rem;
+    gap: 24.6rem;
     color: white;
 }
 
@@ -580,8 +581,8 @@ header {
     text-transform: uppercase;
     font-size: 7.5px;
     color: #f9f9fb;
-    padding-block: .6rem;
-    padding-inline: .8rem;
+    padding-block: .8rem;
+    padding-inline: .6rem;
     border-radius: 3px;
     font-family: "Jost", sans-serif;
     font-weight: 500;
@@ -590,13 +591,14 @@ header {
 }
 
 .product-container {
+    /* border: 2px solid red; */
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1.4rem;
     color: white;
     position: absolute;
     top: 120px;
-    left: 208px;
+    left: 209px;
 }
 
 .icon-container {
@@ -624,28 +626,29 @@ header {
 
 .peru > img {
     width: 160px;
-    height: 30vh;
+    height: 40vh;
     margin-left: 2.1rem;
     margin-top: 1rem;
-    margin-bottom: -1.2rem;
+    margin-bottom: -1.rem;
 }
 
 .columbia > img {
-    margin-top: 1.2rem;
-    margin-bottom: -1rem;
+    width: 230px;
+    margin-top: 1.5rem;
+    margin-bottom: -1.rem;
 }
 
 .vicar > img {
-    width: 160px;
-    height: 30vh;
+    width: 170px;
+    height: 39vh;
     margin-left: 2rem;
-    margin-top: -2rem;
-    margin-bottom: -1.2rem;
+    margin-top: -1.5rem;
+    margin-bottom: -1.rem;
 }
 
 .major-container {
-    width: 235px;
-    height: 41vh;
+    width: 238px;
+    height: 58vh;
     border: .7px solid #3d3c42;
 
 }
@@ -842,12 +845,14 @@ header {
 }
 
 .map-div > img {
-    width: 430px;
-    height: 44vh;
+    width: 450px;
+    height: 60vh;
 }
 
 .form-side {
+    /* border: 10px solid red; */
     width: 450px;
+    height: 60vh;
     background-color: #14121b;
     border: 2px solid #19181f;
 }
@@ -883,7 +888,7 @@ header {
     background-color: #0a090d;
     margin-top: .9rem;
     margin-inline: 3rem;
-    margin-bottom: 1rem;
+    margin-bottom: .2rem;
     padding-inline: 1rem;
     padding-block: .7rem;
     justify-content: space-between;
@@ -912,9 +917,9 @@ header {
     color: #f4f6f3;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 7px;
-    padding-block: .7rem;
-    padding-inline: 1.2rem;
+    font-size: 8px;
+    padding-block: .8rem;
+    padding-inline: 1.3rem;
     border-radius: 2px;
     font-family: "Jost", sans-serif;
     font-weight: 500;
@@ -955,7 +960,7 @@ header {
     text-transform: uppercase;
     font-size: 7px;
     color: #f9f9fb;
-    padding-block: .2rem;
+    padding-block: .3rem;
     padding-inline: .9rem;
     border-radius: 2px;
     font-family: "Jost", sans-serif;
@@ -991,7 +996,7 @@ header {
 
 .blog-image-wrapper > img {
     width: 240px;
-    height: 20vh;
+    height: 27vh;
 }
 
 .blog-content-container {
@@ -1031,8 +1036,9 @@ header {
 }
 
 .ruler {
-    margin-inline: 9rem;
-    position: relative;
+    border: none;
+    border-top: 1px solid rgba(128, 128, 128, 0.429);
+    /* position: relative; */
     top: -500px;
 }
 
